--- a/last-hearth-landing/src/app/layout/header/header.component.html
+++ b/last-hearth-landing/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="relative left-1/4 top-0 mt-8 z-10 flex w-1/2 max-h-16 items-center justify-start rounded-xl gap-4">
+<div class="mt-8 z-10 flex w-1/2 max-h-16 items-center justify-start rounded-xl gap-4">
     <img src="/images/logo.png" class="h-14 w-14  cursor-pointer"/>
     <p class="text-5xl text-white cursor-pointer font-bold">Last Hearth</p>
 </div>
