--- a/last-hearth-landing/src/app/news/news-card/news-card.component.html
+++ b/last-hearth-landing/src/app/news/news-card/news-card.component.html
@@ -1,13 +1,11 @@
-<div class="p-8 flex gap-6 items-start h-full">
-    <div class="h-full w-[20%] flex flex-col gap-4 justify-center items-start">
-        <div class="h-full flex flex-col w-full items-start justify-center gap-4">
-            <img src="/images/screenshots/screen_1.png" class="h-[180px] min-w-[180px] object-cover rounded-full"/>
-            <div class="bg-[#b8c76d] px-2 py-0.5 rounded-xl self-center">
-            <p class="text-black text-base">14.02.25 - 21:35</p>
-            </div>
+<div class="p-8 flex gap-4 items-start justify-between h-full">
+    <div class="h-full flex flex-col w-fit gap-4 justify-center items-start">
+        <img src="/images/screenshots/screen_1.png" class="max-w-52 max-h-52 min-h-52 min-w-52 object-cover rounded-full"/>
+        <div class="bg-[#b8c76d] px-2 py-0.5 rounded-xl self-center">
+            <p class="text-black text-xs text-nowrap">14.02.25 - 21:35</p>
         </div>
     </div>
-    <div class="pt-1 flex flex-col gap-2">
+    <div class="p-2 flex flex-col gap-2">
         <p class="text-white text-2xl">{{ title() }}</p>
         <p class="text-white text-base font-light" [innerHtml]="description()"></p>
     </div>
