feat: Глобальный редизайн

--- a/last-hearth-landing/src/app/landing/landing.component.html
+++ b/last-hearth-landing/src/app/landing/landing.component.html
@@ -5,22 +5,22 @@
     <div class="h-auto w-[60%] flex">
         <div class="flex flex-col w-full">
             <div class="flex gap-2 ml-">
-                <a class="nav-button" [routerLink]="['/home']">ГЛАВНАЯ</a>
-                <a [routerLink]="['/home/rules']" class="nav-button">ПРАВИЛА</a>
+                <a class="nav-button" [routerLink]="['/home']" [ngClass]="{'!bg-[#e2d7bb] !text-[#3f3c34] !font-bold': select === 'home'}" (click)="select = 'home'">ГЛАВНАЯ</a>
+                <a [routerLink]="['/home/rules']" class="nav-button" [ngClass]="{'!bg-[#e2d7bb] !text-[#3f3c34] !font-bold': select === 'rules'}" (click)="select = 'rules'">ПРАВИЛА</a>
             </div>
             <div class="flex h-full gap-3 w-full">
                 <div class="main-panel h-full w-[80%] min-w-[75%]">
                     <router-outlet />
                 </div>
                 <div class="info-panel size-full min-w-70 w-70 flex flex-col items-center">
-                    <p class="text-2xl text-white">Мониторинг сервера:</p>
-                    <div class="flex mt-12 items-center justify-center gap-4">
-                        <div class="rounded-full h-12 w-12 bg-transparent border-4 border-dashed border-green-500 flex justify-center items-center">
-                            <p class="text-base text-white">{{ online }}</p>
+                    <p class="text-2xl text-[#3f3c34]">Мониторинг сервера:</p>
+                    <div class="flex mt-12 items-center justify-center gap-8">
+                        <div class="rounded-full h-12 w-12 bg-transparent border-4 border-dashed border-[#3f3c34] flex justify-center items-center">
+                            <p class="text-base text-[#3f3c34]">{{ online }}</p>
                         </div>
-                        <div class="flex flex-col gap-1 border-b-2 border-blue-500 pb-2 pr-4 items-start justify-start border-dashed">
-                            <p class="text-neutral-300 text-base font-bold">Сервер #1</p>
-                            <p class="text-neutral-300 text-xs">Игроков {{ online }} из 60</p>
+                        <div class="flex flex-col gap-0.5 items-start justify-center border-dashed">
+                            <p class="text-[#3f3c34] text-base font-bold uppercase">Сервер #1</p>
+                            <p class="text-[#3f3c34] text-sm">Игроков {{ online }} из 60</p>
                         </div>
                     </div>
                 </div>
