--- a/last-hearth-landing/src/app/landing/landing.component.less
+++ b/last-hearth-landing/src/app/landing/landing.component.less
@@ -3,21 +3,22 @@
     height: 100dvh;
     width: 100%;
     overflow: scroll;
-    background-color: #1a1a1a;
+    background-color: #31302b;
     ms-overflow-style: none;
     scrollbar-width: none;
-    font-family: 'Ubuntu';
+    font-family: "Advent Pro", serif;
 }
 
 .main-panel {
-    background-color: #1c1c1c;
+    background-color: #e2d7bb;
     -webkit-box-shadow: -12px 4px 8px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: -12px 4px 8px 0px rgba(0, 0, 0, 0.2);
     box-shadow: -12px 4px 8px 0px rgba(0, 0, 0, 0.2);
 }
 
 .info-panel {
-    background-color: #1a1a1a;
+    background-color: #e2d7bb;
+    border-radius: 0px 16px 16px 0px;
     padding: 16px;
     -webkit-box-shadow: 0px 4px 8px 8px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 4px 8px 8px rgba(0, 0, 0, 0.2);
@@ -25,11 +26,11 @@
 }
 
 .nav-button {
-    color: black;
+    color: white;
     font-weight: 500;
-    padding: 4px 12px 4px 12px;
+    padding: 4px 16px 12px 16px;
     border-radius: 12px 12px 0px 0px;
-    background-color: #35a68d;
+    background-color: #31302b;
     cursor: pointer;
     transition: all 0.3s 0s;
 }
