--- a/last-hearth-landing/src/app/home/home.component.html
+++ b/last-hearth-landing/src/app/home/home.component.html
@@ -10,7 +10,8 @@
             />
         }
     </tui-carousel>
-    <div class="absolute inset-0 bg-white/5 backdrop-blur-xs z-10 p-8"></div>
 </div>
-<app-news-card [title]="news[0].title" [description]="news[0].description" class="-mt-6"></app-news-card>
-<app-news-card [title]="news[1].title" [description]="news[1].description"></app-news-card>
+<div class="flex flex-col gap-6 px-4 py-6">
+    <app-news-card [title]="news[0].title" [description]="news[0].description" class="-mt-6"></app-news-card>
+    <app-news-card [title]="news[1].title" [description]="news[1].description"></app-news-card>
+</div>
