--- a/last-hearth-landing/src/app/news/news-card/news-card.component.less
+++ b/last-hearth-landing/src/app/news/news-card/news-card.component.less
@@ -1,17 +1,17 @@
 :host{
-  width: 100%;
-  height: 300px;
-  background-color: #1e1e1e;
-  -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
-  border-left: solid 16px #b8c76d;
-  font-family: 'Ubuntu';
-  transition: all 0.5s 0s;
+    width: 100%;
+    height: 300px;
+    background-color: #cebf9f;
+    -webkit-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.35);
+    -moz-box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.35);
+    font-family: 'Ubuntu';
+    transition: all 0.5s 0s;
+    border-radius: 16px;
 }
 
 :host:hover{
-  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
-  -moz-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
 }
