feat: Работа с дизайном

--- a/last-hearth-landing/src/app/landing/landing.component.less
+++ b/last-hearth-landing/src/app/landing/landing.component.less
@@ -3,7 +3,10 @@
     height: 100dvh;
     width: 100%;
     overflow: scroll;
-    background-color: #31302b;
+    // background-color: #31302b;
+    background-image: url('/images/Group_4_3.png');
+    background-repeat: repeat;
+    background-size: cover;
     ms-overflow-style: none;
     scrollbar-width: none;
     font-family: "Advent Pro", serif;
@@ -11,13 +14,20 @@
 
 .main-panel {
     background-color: #e2d7bb;
+    background-image: url('/image_1.png');
+    background-repeat: repeat;
+    background-size: cover;
     -webkit-box-shadow: -12px 4px 8px 0px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: -12px 4px 8px 0px rgba(0, 0, 0, 0.2);
     box-shadow: -12px 4px 8px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 0px 16px;
 }
 
 .info-panel {
     background-color: #e2d7bb;
+    background-image: url('/image_1.png');
+    background-repeat: repeat;
+    background-size: cover;
     border-radius: 0px 16px 16px 0px;
     padding: 16px;
     -webkit-box-shadow: 0px 4px 8px 8px rgba(0, 0, 0, 0.2);
@@ -28,7 +38,7 @@
 .nav-button {
     color: white;
     font-weight: 500;
-    padding: 4px 16px 12px 16px;
+    padding: 4px 16px 8px 16px;
     border-radius: 12px 12px 0px 0px;
     background-color: #31302b;
     cursor: pointer;
