--- a/last-hearth-landing/src/app/layout/header/header.component.html
+++ b/last-hearth-landing/src/app/layout/header/header.component.html
@@ -1,6 +1,7 @@
 <div class="mt-8 z-10 flex w-1/2 max-h-16 items-center justify-start rounded-xl gap-4">
-    <div class="p-2 rounded-full bg-[#e0d4b6]">
-        <img src="/images/logo.png" class="h-14 w-14  cursor-pointer"/>
+    <div class="relative size-20 rounded-full flex items-center justify-center">
+        <div class="absolute inset-0 bg-white/10 backdrop-blur-lg rounded-full"></div>
+        <img src="/images/logo.png" class="relative z-10 h-14 w-14 cursor-pointer"/>
     </div>
     <p class="text-5xl text-white cursor-pointer font-bold">Last Hearth</p>
 </div>
