fix: Добавление отступов

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -152,7 +152,7 @@
 
                         <div class="shadow-2xs">
                             <div class="flex w-full justify-between gap-2 cursor-pointer" (click)="isMerchantGuild2 = !isMerchantGuild2">
-                                <p class="text-xl pl-8 text-[#3f3c34] cursor-pointer font-bold">2.1.6 Гильдия торговцев II уровня.</p><tui-icon icon="@tui.chevron-down" [ngClass]="{'!rotate-180': isMerchantGuild2}" class="text-[#3f3c34] transition-all"/>
+                                <p class="text-xl pl-8 text-[#3f3c34] cursor-pointer font-bold">2.1.6 Гильдия торговцев 2 уровня.</p><tui-icon icon="@tui.chevron-down" [ngClass]="{'!rotate-180': isMerchantGuild2}" class="text-[#3f3c34] transition-all"/>
                             </div>
                             <tui-expand [expanded]="isMerchantGuild2">
                                 <div class="flex flex-col gap-2">
