--- a/last-hearth-landing/src/app/landing/landing.component.html
+++ b/last-hearth-landing/src/app/landing/landing.component.html
@@ -8,7 +8,7 @@
                 <a class="nav-button" [routerLink]="['/home']" [ngClass]="{'!bg-[#e2d7bb] !text-[#3f3c34] !font-bold !text-base': select === 'home'}" (click)="select = 'home'">ГЛАВНАЯ</a>
                 <a [routerLink]="['/rules']" class="nav-button" [ngClass]="{'!bg-[#e2d7bb] !text-[#3f3c34] !font-bold !text-base': select === 'rules'}" (click)="select = 'rules'">ПРАВИЛА</a>
             </div>
-            <div class="flex h-full gap-3 w-full">
+            <div class="flex h-full gap-3 w-full mb-10">
                 <div class="main-panel h-full w-[80%] min-w-[75%]">
                     <router-outlet />
                 </div>
