fix: Небольшая доработка правил

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -79,6 +79,7 @@
                                     <p class="text-xl pl-16">Игроки количеством от 7-и человек, имеющие необходимую регистрацию своего селения/образования и выполняющие все требования приведенные ниже.</p>
                                     <p class="text-xl pl-16 text-[#3f3c34] font-bold">Требования к образованию:</p>
                                     <p class="text-xl pl-20">• Пройденная и сохраненная стадия образования “Община”.</p>
+                                    <p class="text-xl pl-20">• Переделанный монумент под размеры 3х3х1 (постамент) + из центра вверх 1х1х3 (без учета блока на который ставится столбик).</p>
                                     <p class="text-xl pl-20">• Дорожная инфраструктура до спавна или обустроенные порты до спавна (с буйками по пути каждые ~100 блоков).</p>
                                     <p class="text-xl pl-20">• Главное здание города (Ратуша/Крепость/Дом наместника и т.д.).</p>
                                     <p class="text-xl pl-20">• Не менее 7-и игроков.</p>
@@ -108,6 +109,7 @@
                                     <p class="text-xl pl-16 text-[#3f3c34] font-bold">Требования к образованию:</p>
                                     <p class="text-xl pl-20">• Пройденная и сохраненная стадия образования “Город”.</p>
                                     <p class="text-xl pl-20">• Свод законов.</p>
+                                    <p class="text-xl pl-20">• Переделанный монумент под размеры 3х3х2 (постамент) + из центра вверх 1х1х4 (без учета блока на который ставится столбик).</p>
                                     <p class="text-xl pl-20">• Наместник (Он же правитель).</p>
                                     <p class="text-xl pl-20">• Не менее 10-ти игроков.</p>
                                     <p class="text-xl pl-20">• От 7-и домов для горожан.</p>
