--- a/last-hearth-landing/src/app/news/news-card/news-card.component.html
+++ b/last-hearth-landing/src/app/news/news-card/news-card.component.html
@@ -1,9 +1,9 @@
-<div class="p-8 flex gap-4 items-start justify-between h-full">
-    <div class="h-full flex flex-col w-fit gap-4 justify-center items-start">
+<div class="p-4 lg:p-8 flex gap-1 lg:gap-4 items-start justify-between h-full">
+    <div class="h-full card-visibility flex-col w-fit gap-4 justify-center items-start">
         <img src="/images/screenshots/screen_1.png" class="max-w-52 max-h-52 min-h-52 min-w-52 object-cover rounded-full"/>
     </div>
-    <div class="p-2 flex flex-col gap-2">
-        <p class="text-[#3f3c34] text-2xl">{{ title() }}</p>
+    <div class="p-1 lg:p-2 flex flex-col lg:gap-2 gap-0.5 break-all md:break-normal">
+        <p class="text-[#3f3c34] lg:text-2xl text-xl">{{ title() }}</p>
         <p class="text-[#3f3c34] text-base font-light" [innerHtml]="description()"></p>
     </div>
     <div class="flex flex-col justify-between h-full">
