--- a/last-hearth-landing/src/app/news/news-card/news-card.component.less
+++ b/last-hearth-landing/src/app/news/news-card/news-card.component.less
@@ -15,3 +15,21 @@
     -moz-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.5);
 }
+
+.card-visibility {
+    display: flex;
+}
+
+@media (min-width: 1700px) {
+    .card-visibility {
+        display: flex !important;
+    }
+}
+
+
+@media (max-width: 1700px) {
+    .card-visibility {
+        display: none !important;
+    }
+}
+
