--- a/last-hearth-landing/src/app/home/home.component.html
+++ b/last-hearth-landing/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="relative">
-    <tui-carousel
+    sdddddddddddddddddd
+    <!-- <tui-carousel
     [(index)]="carouselIndex" [duration]="3000"
     class="size-full">
         @for (item of images; track $index) {
@@ -9,7 +10,7 @@
                 class="h-[400px] object-cover object-center"
             />
         }
-    </tui-carousel>
+    </tui-carousel> -->
 </div>
 <!-- @if(news) {
     <div class="flex flex-col gap-7 px-10 py-10">
