--- a/last-hearth-landing/src/app/home/home.component.html
+++ b/last-hearth-landing/src/app/home/home.component.html
@@ -1,6 +1,5 @@
 <div class="relative">
-    sdddddddddddddddddd
-    <!-- <tui-carousel
+    <tui-carousel
     [(index)]="carouselIndex" [duration]="3000"
     class="size-full">
         @for (item of images; track $index) {
@@ -10,11 +9,9 @@
                 class="h-[400px] object-cover object-center"
             />
         }
-    </tui-carousel> -->
+    </tui-carousel>
 </div>
-<!-- @if(news) {
-    <div class="flex flex-col gap-7 px-10 py-10">
-        <app-news-card [title]="news[0].title" [description]="news[0].description" class="-mt-6"></app-news-card>
-        <app-news-card [title]="news[1].title" [description]="news[1].description"></app-news-card>
-    </div>
-} -->
+<div class="flex flex-col gap-7 px-10 py-10">
+    <app-news-card [title]="news[0].title" [description]="news[0].description" class="-mt-6"></app-news-card>
+    <app-news-card [title]="news[1].title" [description]="news[1].description"></app-news-card>
+</div>
