--- a/last-hearth-landing/src/app/landing/landing.component.html
+++ b/last-hearth-landing/src/app/landing/landing.component.html
@@ -1,30 +1,52 @@
 @let online =  online$ | async;
 
 <div class="pt-8 flex flex-col justify-center items-center">
-    <app-header class="w-[60%] mb-8"/>
-    <div class="h-auto w-[60%] flex">
+    <app-header class="w-full lg:w-[60%] mb-8"/>
+
+    <div class="h-auto w-full lg:w-[60%] flex">
         <div class="flex flex-col w-full">
-            <div class="flex gap-4 w-[80%] mb-4">
-                <a class="nav-button rounded-lg !p-2.5" [routerLink]="['/home']" [ngClass]="{'!bg-[#e2d7bb] !text-[#3f3c34] !font-bold !text-sm': select === 'home'}" (click)="select = 'home'"><tui-icon icon="@tui.house"/></a>
-                <button [routerLink]="['/rules']" class="nav-button rounded-lg p-2.5 px-4 justify-center items-center text-base" [ngClass]="{'!bg-[#e2d7bb] !text-[#3f3c34] !font-bold !text-base': select === 'rules'}" (click)="select = 'rules'">ПРАВИЛА</button>
+            <!-- Блок навигации -->
+            <div class="flex gap-4 w-full lg:w-[80%] mb-4">
+                <a (click)="select = 'home'" class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5" [routerLink]="['/home']" [ngClass]="{'!bg-[#e2d7bb] !text-lh-primary !font-bold !text-sm': select === 'home'}">
+                  <tui-icon icon="@tui.house"/>
+                </a>
+                <button [routerLink]="['/rules']" (click)="select = 'rules'" class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4" [ngClass]="{'!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'rules'}">
+                  ПРАВИЛА
+                </button>
             </div>
-            <div class="flex h-full gap-3 w-full mb-10">
-                <div class="main-panel h-full w-[80%] min-w-[75%]">
+
+            <!-- Блок основной и мониторинговой панелей -->
+            <div class="flex size-full gap-3 mb-10">
+
+                <!-- Основная панель -->
+                <div class="main-panel h-full w-full lg:w-[80%] min-w-[75%]">
+                    <div class="lg:hidden">
+                      <ng-container [ngTemplateOutlet]="monitoring"></ng-container>
+                    </div>
+
                     <router-outlet />
                 </div>
-                <div class="info-panel size-full min-w-70 w-70 flex flex-col items-center">
-                    <p class="text-2xl text-[#3f3c34]">Мониторинг сервера:</p>
-                    <div class="flex mt-12 items-center justify-center gap-8">
-                        <div class="rounded-full h-12 w-12 bg-transparent border-4 border-dashed border-[#3f3c34] flex justify-center items-center">
-                            <p class="text-base text-[#3f3c34]">{{ online }}</p>
-                        </div>
-                        <div class="flex flex-col gap-0.5 items-start justify-center border-dashed">
-                            <p class="text-[#3f3c34] text-base font-bold uppercase">Сервер #1</p>
-                            <p class="text-[#3f3c34] text-sm">Игроков {{ online }} из 60</p>
-                        </div>
-                    </div>
+
+                <div class="hidden lg:block">
+                  <ng-container [ngTemplateOutlet]="monitoring"></ng-container>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<!-- Панель мониторинга -->
+<ng-template #monitoring>
+  <div class="info-panel p-4 lg:rounded-e-2xl w-full h-12 lg:size-full lg:min-w-70 lg:w-70 flex lg:flex-col items-center">
+    <p class="text-2xl text-lh-primary">Мониторинг сервера:</p>
+    <div class="flex lg:mt-12 items-center justify-center gap-8">
+        <div class="rounded-full h-8 w-8 ml-4 lg:h-12 lg:w-12 lg:ml-0 bg-transparent border-4 border-dashed border-[#3f3c34] flex justify-center items-center">
+            <p class="text-base text-lh-primary">{{ online }}</p>
+        </div>
+        <div class="flex flex-col gap-0 lg:gap-0.5 items-start justify-center border-dashed">
+            <p class="text-lh-primary text-base font-bold uppercase">Сервер #1</p>
+            <p class="text-lh-primary text-sm">Игроков {{ online }} из 60</p>
+        </div>
+      </div>
+  </div>
+</ng-template>
