--- a/last-hearth-landing/src/app/landing/landing.component.html
+++ b/last-hearth-landing/src/app/landing/landing.component.html
@@ -1,6 +1,6 @@
 @let online =  online$ | async;
 
-<div class="pt-8 flex flex-col justify-center items-center">
+<div class="pt-8 flex flex-col justify-center items-center px-4 sm:px-0">
     <app-header class="w-full lg:w-[60%] mb-8"/>
 
     <div class="h-auto w-full lg:w-[60%] flex">
@@ -37,15 +37,15 @@
 
 <!-- Панель мониторинга -->
 <ng-template #monitoring>
-  <div class="info-panel p-4 lg:rounded-e-2xl w-full h-12 lg:size-full lg:min-w-70 lg:w-70 flex lg:flex-col items-center">
-    <p class="text-2xl text-lh-primary">Мониторинг сервера:</p>
+  <div class="info-panel p-4 lg:rounded-e-2xl w-full h-14 lg:size-full lg:min-w-70 lg:w-70 flex lg:flex-col items-center">
+    <p class="lg:text-2xl text-base text-lh-primary">Мониторинг сервера:</p>
     <div class="flex lg:mt-12 items-center justify-center gap-8">
         <div class="rounded-full h-8 w-8 ml-4 lg:h-12 lg:w-12 lg:ml-0 bg-transparent border-4 border-dashed border-[#3f3c34] flex justify-center items-center">
             <p class="text-base text-lh-primary">{{ online }}</p>
         </div>
-        <div class="flex flex-col gap-0 lg:gap-0.5 items-start justify-center border-dashed">
-            <p class="text-lh-primary text-base font-bold uppercase">Сервер #1</p>
-            <p class="text-lh-primary text-sm">Игроков {{ online }} из 60</p>
+        <div class="flex flex-col gap-0 lg:gap-0.5 items-start justify-center">
+            <p class="text-lh-primary text-sm font-bold uppercase">Сервер #1</p>
+            <p class="text-lh-primary text-xs">Игроков {{ online }} из 60</p>
         </div>
       </div>
   </div>
