--- a/last-hearth-landing/src/app/layout/header/header.component.html
+++ b/last-hearth-landing/src/app/layout/header/header.component.html
@@ -1,7 +1,7 @@
-<div class="mt-8 z-10 flex w-1/2 max-h-16 items-center justify-start rounded-xl gap-4">
+<div class="mt-8 z-10 flex w-1/2 max-h-16 items-center justify-start rounded-xl gap-1 sm:gap-4">
     <div class="relative size-20 rounded-full flex items-center justify-center">
-        <div class="absolute inset-0 bg-white/10 backdrop-blur-lg rounded-full"></div>
-        <img src="/images/logo.png" class="relative z-10 h-14 w-14 cursor-pointer"/>
+        <div class="absolute inset-0 bg-white/10 backdrop-blur-lg scale-70 sm:scale-100 rounded-full"></div>
+        <img src="/images/logo.png" class="relative z-10 h-10 w-10 sm:h-14 sm:w-14 cursor-pointer"/>
     </div>
-    <p class="text-5xl text-white cursor-pointer font-bold">Last Hearth</p>
+    <p class="text-2xl sm:text-5xl text-white cursor-pointer font-bold text-nowrap">Last Hearth</p>
 </div>
