--- a/last-hearth-landing/src/app/news/news-card/news-card.component.html
+++ b/last-hearth-landing/src/app/news/news-card/news-card.component.html
@@ -1,13 +1,13 @@
-<div class="p-8 flex gap-4 items-start justify-between h-full">
-    <div class="h-full flex flex-col w-fit gap-4 justify-center items-start">
+<div class="p-4 sm:p-8 flex sm:flex-row flex-col gap-4 items-start justify-between h-full">
+    <div class="h-full hidden md:flex lg:hidden 2xl:flex flex-col w-fit gap-4 justify-center items-start">
         <img src="/images/screenshots/screen_1.png" class="max-w-52 max-h-52 min-h-52 min-w-52 object-cover rounded-full"/>
     </div>
-    <div class="p-2 flex flex-col gap-2">
-        <p class="text-lh-primary text-2xl">{{ title() }}</p>
+    <div class="p-0.5 sm:p-2 flex flex-col gap-2">
+        <p class="text-lh-primary text-xl sm:text-2xl">{{ title() }}</p>
         <p class="text-lh-primary text-base font-light" [innerHtml]="description()"></p>
     </div>
-    <div class="flex flex-col justify-between h-full">
-        <div class="relative bg-[#945a32] px-2 py-1 rounded-xl">
+    <div class="flex sm:flex-col justify-between gap-4 items-end sm:items-start sm:gap-0 h-full">
+        <div class="relative bg-[#945a32] h-fit px-2 py-1 rounded-xl">
             <p class="text-white text-xs text-nowrap">14.02.25 - 21:35</p>
         </div>
         <a class="relative text-lh-primary font-bold text-base">Подробнее</a>
