--- a/last-hearth-landing/src/app/home/home.component.html
+++ b/last-hearth-landing/src/app/home/home.component.html
@@ -12,6 +12,7 @@
     </tui-carousel>
 </div>
 <div class="flex flex-col gap-7 px-10 py-10">
-    <app-news-card [title]="news[0].title" [description]="news[0].description" class="-mt-6"></app-news-card>
-    <app-news-card [title]="news[1].title" [description]="news[1].description"></app-news-card>
+    @for (item of news; track $index; let first = $first) {
+      <app-news-card [ngClass]="{'-mt-6' : first}" [news]="item"></app-news-card>
+    }
 </div>
