fix: Доработки правил

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -142,6 +142,8 @@
                                     <p class="text-xl pl-20">• Малая рыночная площадь неподалеку от главного здания.</p>
                                     <p class="text-xl pl-20">• Составленный документ торговли. (Описывает то, что вы продаете/собираетесь продавать и регулирует ваши цены на продукцию. Все цены должны быть в валюте короны).</p>
                                     <p class="text-xl pl-20">• Выполнение запрета о невмешательстве в военные действия и грабежи.</p>
+                                    <p class="text-xl pl-20">• Плата налога Короне в размере N монет каждые реальные три дня.</p>
+                                    <p class="text-xl pl-20">• Наличие минимум одного оформленного торгового поста в общине/городе/провинции.</p>
                                     <p class="text-xl pl-16 text-lh-primary font-bold">Преимущества:</p>
                                     <p class="text-xl pl-20">• Предоставление на выбор 4-х торговцев.</p>
                                     <p class="text-xl pl-20">• Доступ к уникальным рынкам короны на спавне.</p>
@@ -165,6 +167,8 @@
                                     <p class="text-xl pl-20">• Благоустроенные (3 блока шириной минимум и огороженные отмосткой) и проведенные дороги между всеми постройками гильдии.</p>
                                     <p class="text-xl pl-20">• Не менее 2-х выполненных заданий от Короны.</p>
                                     <p class="text-xl pl-20">• Возможность предоставления кредитования образованиям любого уровня.</p>
+                                    <p class="text-xl pl-20">• Плата налога Короне в размере N монет каждые реальные три дня.</p>
+                                    <p class="text-xl pl-20">• Наличие минимум трех оформленных торговых постов в общине/городе/провинции, один из которых в городе/провинции.</p>
                                     <p class="text-xl pl-16 text-lh-primary font-bold">Преимущества:</p>
                                     <p class="text-xl pl-20">• Предоставление на выбор дополнительных 6-ти торговцев.</p>
                                     <p class="text-xl pl-20">• Предоставление доступа ко всем рынкам короны, включая уникальные.</p>
@@ -335,10 +339,10 @@
                             <p class="text-xl pl-20">• Сундуков и сосудов.</p>
                             <p class="text-xl pl-16">• Следует помнить, что для атакующих запрещено использование планера.</p>
                             <p class="text-xl pl-16">• Запрещено ломать всё, кроме:</p>
-                            <p class="text-xl pl-16">• Дверей и любых их проявлений. Ломание ворот (Ворота - двери 3-и и более блоков в ширину и не менее 3-х в высоту) может происходить только при наличии около них тарана, стоящего не более чем в 1 блоке от них.</p>
+                            <p class="text-xl pl-16">• Дверей и любых их проявлений. Ломание ворот (Ворота - двери 3-и и более блоков в ширину и не менее 3-х в высоту) может происходить только при наличии около них тарана, стоящего не более чем в 1 блоке от них. Если для развертывания тарана нет суши - допускается его наличие в сундуке на корабле на таком же расстоянии до ворот (корабль двигать нельзя).</p>
                             <p class="text-xl pl-16">• Крепостных стен (подразумеваются внешние стены огораживающие основные постройки).</p>
                             <p class="text-xl pl-20">• Крепостные стены разрешается ломать только в местах пролома.</p>
-                            <p class="text-xl pl-24">• Места пролома - это места, выбранные атакующими для разрушения и не превышающие своим размером площадь 3х3 блока. Такие места ограничены количеством наличия у атакующих осадных машин типа требушет. Вычизленные требушеты должны быть скинуты администрации заранее и одобрены. При атаке требушет должен быть развернут не более чем в 30 блоков от места пролома.</p>
+                            <p class="text-xl pl-24">• Места пролома - это места, выбранные атакующими для разрушения и не превышающие своим размером площадь 3х3 блока. Такие места ограничены количеством наличия у атакующих осадных машин типа требушет. Вычизленные требушеты должны быть скинуты администрации заранее и одобрены. При атаке требушет должен быть развернут не более чем в 30 блоков от места пролома. Если для развертывания требушета нет суши - допускается его наличие в сундуке на корабле на таком же расстоянии до места пролома (корабль двигать нельзя).</p>
                             <p class="text-xl pl-16">• Установленных защитниками баррикад и насыпей в виде песка и гравия.</p>
                             <p class="text-xl pl-16">• Сундуков, сосудов, ящиков и прочих элементов хранения (в том числе разрешается ломать сыродутные печи и саркофаги с целью получения ресурсов, находящихся внутри них.)</p>
                             <p class="text-xl pl-16">• Запрещается использование бомб и взрывчатки (вероятно временное решение).</p>
@@ -407,7 +411,7 @@
             <div class="flex flex-col gap-2">
                 <p class="text-xl pl-8"><span class="font-bold">10.1</span> Запрещено ломать и поджигать постройки сложного типа. Под сложным типом понимаются постройки, в которых использовался чизел в каком-либо объеме. Однако, есть ряд исключений:</p>
                 <p class="text-xl pl-16"><span class="font-bold">•</span> Двери в таких постройках, либо не чизельный блок, если двери отсутствуют вовсе, либо если блок закрывает доступ к сундуку и нет никаких иных вариантов к нему добраться.</p>
-                <p class="text-xl pl-16"><span class="font-bold">•</span> Постройки, относящиеся к оборонительным укреплениям. К таковым могут относиться: стены, башни и прочие укрепления, а также постройки, которые администрация при проверке может счесть оборонительными укреплениями. За исключением оговорок примененных в п.7.3.</p>
+                <p class="text-xl pl-16"><span class="font-bold">•</span> Постройки, относящиеся к оборонительным укреплениям. К таковым могут относиться: стены, башни и прочие укрепления, а также постройки, которые администрация при проверке может счесть оборонительными укреплениями. За исключением оговорок примененных в п.6.4.</p>
                 <p class="text-xl pl-16"><span class="font-bold">•</span> Разрушение таковых построек допускается вследствие штурма-осады с использованием правил специальных пунктов.</p>
             </div>
         </tui-expand>
