--- a/last-hearth-landing/src/app/landing/landing.component.html
+++ b/last-hearth-landing/src/app/landing/landing.component.html
@@ -6,12 +6,21 @@
     <div class="h-auto w-full lg:w-[60%] flex">
         <div class="flex flex-col w-full">
             <!-- Блок навигации -->
-            <div class="flex gap-4 w-full lg:w-[80%] mb-4">
+            <div class="flex gap-2 justify-center md:justify-start md:gap-4 w-full lg:w-[80%] mb-4">
                 <a (click)="select = 'home'" class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg p-2.5" [routerLink]="['/home']" [ngClass]="{'!bg-[#e2d7bb] !text-lh-primary !font-bold !text-sm': select === 'home'}">
                   <tui-icon icon="@tui.house"/>
                 </a>
-                <button [routerLink]="['/rules']" (click)="select = 'rules'" class="nav-button text-white font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4" [ngClass]="{'!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'rules'}">
+                <button [routerLink]="['/rules']" (click)="select = 'rules'" class="nav-button md:min-w-20 text-white md:tracking-wider font-bold cursor-pointer bg-lh-primary-2 rounded-lg py-2.5 px-4" [ngClass]="{'!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'rules'}">
                   ПРАВИЛА
+                </button>
+                <button [routerLink]="['/titles']" (click)="select = 'titles'" class="nav-button md:min-w-20 text-white md:tracking-wider font-bold cursor-pointer  bg-lh-primary-2 rounded-lg py-2.5 px-4" [ngClass]="{'!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'titles'}">
+                  ТИТУЛЫ
+                </button>
+                <button [routerLink]="['/titles']" (click)="select = 'settlements'" class="nav-button md:min-w-20 text-white md:tracking-wider font-bold cursor-pointer  bg-lh-primary-2 rounded-lg py-2.5 px-4" [ngClass]="{'!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'settlements'}">
+                  ПОСЕЛЕНИЯ
+                </button>
+                <button [routerLink]="['/titles']" (click)="select = 'wiki'" class="nav-button md:min-w-20 text-white md:tracking-wider font-bold cursor-pointer  bg-lh-primary-2 rounded-lg py-2.5 px-4" [ngClass]="{'!bg-[#e2d7bb] !text-lh-primary !font-bold !text-base': select === 'wiki'}">
+                  WIKI
                 </button>
             </div>
 
