feat: Добавлен пункт правил

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -175,6 +175,7 @@
                                     <p class="text-xl pl-20">• Предоставление возможности выдавать 2 здания каждому образованию в реальную неделю от имени короны, после согласования.</p>
                                     <p class="text-xl pl-20">• Возможность получения кредитов от короны либо финансового, либо товарного типа.</p>
                                     <p class="text-xl pl-20">• Возможность смены класса в университетах короны 1 раз в реальную неделю для 1 человека за плату.</p>
+                                    <p class="text-xl pl-20">• Возможность раз в игровой год предлагать товар для скупки Короне.</p>
                                 </div>
                             </tui-expand>
                         </div>
