feat: Обновление правил

--- a/last-hearth-landing/src/app/rules/rules.component.html
+++ b/last-hearth-landing/src/app/rules/rules.component.html
@@ -440,7 +440,7 @@
                 <p class="text-xl pl-8"><span class="font-bold">12.1</span> Корона - далекая, недостижимая столица государства, в котором происходит весь игровой процесс.</p>
                 <p class="text-xl pl-8"><span class="font-bold">12.2</span> Рынки короны - специальные торгоматы для продажи/покупки товаров короны за валюту короны.</p>
                 <p class="text-xl pl-8"><span class="font-bold">12.3</span> Запрещено оскорбление администрации в любых его проявлениях. Соблюдайте вежливость, и та же вежливость вернется к вам. В случае нарушения, администрация в праве выдать мут на подумать. В случае злостного нарушения – бан.</p>
-                <p class="text-xl pl-8"><span class="font-bold">12.4</span> Для людей с титулом запрещено приватить любые оборонительные постройки и входы в них. Так же запрещается приват монумента. Запрещено хранение более 30% ресурсов селения в сундуках привата (хранение ресурсов, которыми владеет сам игрок с титулом неограниченно).</p>
+                <p class="text-xl pl-8"><span class="font-bold">12.4</span> Для людей с титулом запрещено приватить любые оборонительные постройки и входы в них, а так же входы в любые помещения. Так же запрещается приват монумента. Запрещено хранение более 30% имеющихся ресурсов селения/или игрока если он соло, внутри привата.</p>
             </div>
         </tui-expand>
     </div>
